--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -72,6 +72,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - app/views/**/*.json.jbuilder
+    - app/views/**/*.xml.builder
     - config/**/*
     - spec/**/*
 
