Improve WAL cleanup

--- a/.github/workflows/pg_base_backup.yml
+++ b/.github/workflows/pg_base_backup.yml
@@ -21,6 +21,11 @@ jobs:
     needs:
       - pg_basebackup
     steps:
-      - run: |
-          wal_files=$(docker volume inspect pg_wal_archive --format '{{ .Mountpoint }}')
-          find $wal_files -mtime +2 -delete
+      - name: Remove old WAL archive files
+        working-directory: /opt/app/skyderby
+        run: |
+          docker-compose exec db find /wal_archive -type f -name "*.backup" -mtime +$((60*48)) -exec /bin/bash -c 'pg_archivecleanup -d /wal_archive $(basename  "$1")' - {} \;
+      - name: Remove backup labels
+        working-directory: /opt/app/skyderby
+        run: |
+          docker-compose exec db find /wal_archive -type f -name "*.backup" -mmin +$((60*48)) -print -exec rm '{}' \;
